sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value j
    sauter(j, i, indLastValue, v);
           ^AlgInsertionSort:16: error: overloaded method value > with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Any)
    if(getValue(i-j-1) > v){
                       ^AlgInsertionSort:18: error: reassignment to val
      indLastValue = i-j-1; 
                   ^AlgInsertionSort:21: error: type mismatch;
 found   : Any
 required: Int
      setValue(indLastValue, v);
                             ^